# handwritten-digits-classifier

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  requirements.txt
.run/: hwdc_gradio.run.xml  start_train.run.xml
hwdc/: hwdc_model.py  hwdc_model_type.py  model.py
hwdc/core/: __init__.py  config.py  logger.py  resource.py  tensor.py
hwdc_gradio/: config.py  hwdc_gradio_app.py  main.py
hwdc_trainer/: __init__.py  config.py  dataset_loader.py  hwdc_model_trainer.py  main.py  pth2onnx.py  train.py  upload.py
vision_models/core/: __init__.py  config.py  log.py  model.py  model_trainer.py
vision_models/core/types/: dataset_type.py  model_save_type.py  model_type.py
vision_models/core/utils/: dataset_loader.py  logger.py  resource.py  strings.py  tensor.py
vision_models/gradio_app/: config.py  gradio_app.py  main.py
vision_models/models/cifar10/: cifar10_gradio_app.py  cifar10_model.py  cifar10_model_trainer.py  config.py
vision_models/models/mnist/: config.py  mnist_gradio_app.py  mnist_model.py  mnist_model_trainer.py
vision_models/trainer/: config.py  train.py  trainer_loader.py  upload.py
